# dependency-injector-tenant-singleton

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/dependency_injector_tenant_singleton/: __init__.py  provider.py
tests/: provider_test.py  smoke_test.py
