[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8"
]

[project]
name = "dependency-injector-tenant-singleton"
version = "1.0.0"
description = "Tenant-scoped singleton provider for dependency-injector framework"
readme = "README.md"
authors = [
  {name = "Roman Tolkachyov", email = "roman@tolkachyov.name"}
]
requires-python = ">=3.10"
dependencies = [
  "dependency-injector"
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-fail-under=100"
]
