[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8"
]

[project]
name = "dependency-injector-tenant-singleton"
version = "1.0.1"
description = "Tenant-scoped singleton provider for dependency-injector framework"
keywords = ["dependency-injector", "provider", "singleton"]
readme = "README.md"
authors = [
  {name = "Roman Tolkachyov", email = "roman@tolkachyov.name"}
]
maintainers = [
  {name = "Roman Tolkachyov", email = "roman@tolkachyov.name"}
]
requires-python = ">=3.10"
dependencies = [
  "dependency-injector"
]
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[project.urls]
Homepage = "https://github.com/romantolkachyov/dependency-injector-tenant-singleton"
Repository = "https://github.com/romantolkachyov/dependency-injector-tenant-singleton.git"
Issues = "https://github.com/romantolkachyov/dependency-injector-tenant-singleton/issues"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-fail-under=100"
]
